<resources>

    <string name="app_name">GriffinPiece</string>
    <string name="email">Email</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="username">Username</string>
    <string name="vous_avez_dej_un_compte">Vous avez dejà un compte?</string>
    <string name="cliquez_ici">Cliquez-ici!</string>
    <string name="password">password</string>
    <string name="vous_n_avez_pas_de_compte">Vous n\'avez pas de compte?</string>
    <string name="se_connecter">Se connecter</string>
    <string name="mon_compte">Mon compte</string>
    <string name="account">Mon Compte</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="textview">TextView</string>
    <string name="username_du_compte">Username du compte</string>
    <string name="modifier_votre_compte">Modifier votre compte</string>
    <string name="changer_votre_courriel">Changer votre courriel</string>
    <string name="changer_votre_mot_de_passe">Changer votre mot de passe</string>
    <string name="emailTESTING">test@test.com</string>
    <string name="passwordTESTING">test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>