<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FourthFragment">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="531dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545">

        <TextView
            android:id="@+id/txtViewCompte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/account"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/username_du_compte"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:text="@string/changer_votre_courriel"
            android:drawableEnd="@drawable/arrow_right"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/arrow_right"
            android:layout_marginBottom="20sp"
            android:text="@string/changer_votre_mot_de_passe"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnDisconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF5722"
            android:text="@string/se_d_connecter"

            android:textColor="#212121" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>