<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.compte.AccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="531dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545">

        <TextView
            android:id="@+id/txtViewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/username_du_compte"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardBackgroundColor="@android:color/transparent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            >

            <TextView
                android:id="@+id/txtViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                android:text="@string/changer_votre_courriel"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnChangeEmail"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|end"
                android:layout_marginEnd="8dp"
                android:background="@drawable/arrow_right"
                app:backgroundTint="@color/white"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardBackgroundColor="@android:color/transparent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            >

            <TextView
                android:id="@+id/txtViewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                android:text="@string/changer_votre_mot_de_passe"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|end"
                android:layout_marginEnd="8dp"
                android:background="@drawable/arrow_right"
                app:backgroundTint="@color/white"/>

        </androidx.cardview.widget.CardView>

        <Button
            android:layout_marginTop="8dp"
            android:id="@+id/btnDisconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF5722"
            android:text="@string/se_d_connecter"
            android:clipToPadding="false"
            android:layout_marginBottom="20dp"
            android:textColor="#212121" />

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>